Add comment character to end of title
This prevents unwanted spaces.

--- a/main.tex
+++ b/main.tex
@@ -26,8 +26,10 @@
 % If you have a long title, split it between multiple lines using the \\ command
 \Title{Titles Should Not Exceed Six Inches on One Line\\
    and In The Inverted Pyramid Format\\
-   When Additional Lines Are Needed
+   When Additional Lines Are Needed%
 }
+
+
 
 
 % Insert your research advisor and his title here
