Load showkeys package again

--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,7 @@
 %% standard LaTeX commands
 \usepackage{booktabs} % for better tables
 \usepackage[colorlinks=false]{hyperref}  % for urls
+\usepackage{showkeys} % this is a convenient package, but causes problems
 
 
 % Insert your name here
