Fix comments and remove extra lines

--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,5 @@
+% Switch this line to the final option when submitting your thesis.
+% This will correct counts and remove labels that are shown during draft mode
 \documentclass[masters,draft]{UTPAthesis}
 %\documentclass[masters,final]{UTPAthesis}
 %\documentclass[masters,final, nodedication, noacknowledgments]{UTPAthesis}
@@ -12,7 +14,8 @@
 \usepackage{showkeys} % this is a convenient package, but causes problems
 
 
-% Insert your name here
+
+% Insert your name and major here in the format shown
 \Author{John Q. Citizen}
 \AuthorLastFirst{Citizen, John Q.}
 \Major{Mathematics}
@@ -25,12 +28,11 @@
 
 % Insert the title of your thesis here.
 % If you have a long title, split it between multiple lines using the \\ command
+% Also, use comment characters to avoid unwanted spaces in the Abstract page
 \Title{Titles Should Not Exceed Six Inches on One Line\\
    and In The Inverted Pyramid Format\\
    When Additional Lines Are Needed%
 }
-
-
 
 
 % Insert your research advisor and his title here
@@ -70,7 +72,6 @@ Acknowledgements should be simple, in good taste, and fit on one page.
 \BiographicalSketch{%
 A brief biographical sketch of the student is required as part of each thesis.
 }
-
 
 
 
