Add comment about \MemberATitle

--- a/main.tex
+++ b/main.tex
@@ -41,6 +41,7 @@
 
 
 %% Insert the members of your committee here
+%% You can also give MemberA a special title
 \MemberA{Dr. Carl Friedrich Gauss}  %\MemberATitle{Co-Chair of Committee}
 \MemberB{Dr. G. F. Bernhard Riemann}
 \MemberC{}
