Change comment about counts above \Abstract

--- a/main.tex
+++ b/main.tex
@@ -49,8 +49,9 @@
 
 
 % Insert the text of your abstract below.
-% The thesis manual also requires a bibliography style "citation" here.
-% Insert the counts for tables and figures.
+% The bibliography style "citation" required by the manual is automatically
+% generated.  Specify the "final" option in the \documentclass to update the
+% counts to the correct values.
 \Abstract{%
   An abstract is a brief summary often used to help the reader quickly
   ascertain the paper's purpose.
