--- a/main.tex
+++ b/main.tex
@@ -58,13 +58,13 @@
 }
 
 
-% You can dedicate your paper here
+% You can dedicate your paper here.  This is optional.
 \Dedication{%
 Dedication should be simple, in good taste, and fit on one page.
 }
 
 
-% Acknowledge those who helped and supported you here.
+% Acknowledge those who helped and supported you here. This is optional.
 \Acknowledgments{%
 Acknowledgements should be simple, in good taste, and fit on one page.
 }
