Add package to main.tex

--- a/main.tex
+++ b/main.tex
@@ -10,8 +10,9 @@
 %% to make sure they are not over-written.  They redefine many
 %% standard LaTeX commands
 \usepackage{booktabs} % for better tables
+\usepackage{microtype} % for better typography
 \usepackage[colorlinks=false]{hyperref}  % for urls
-\usepackage{showkeys} % this is a convenient package, but causes problems
+\usepackage{showkeys} % shows labels during draft mode
 
 
 
