Add the word "be" to the title

--- a/main.tex
+++ b/main.tex
@@ -31,7 +31,7 @@
 % If you have a long title, split it between multiple lines using the \\ command
 % Also, use comment characters to avoid unwanted spaces in the Abstract page
 \Title{Titles Should Not Exceed Six Inches on One Line\\
-   and In The Inverted Pyramid Format\\
+   and Be In The Inverted Pyramid Format\\
    When Additional Lines Are Needed%
 }
 
