Add how to add Page to TOC as a comment

--- a/UTPAthesis.cls
+++ b/UTPAthesis.cls
@@ -433,7 +433,7 @@
 \setlength{\cftbeforechapskip}{1ex}
 \setlength{\cftbeforesecskip}{1ex}
 \setlength{\cftbeforesubsecskip}{1ex}
-
+%\addtocontents{toc}{~\hfill{Page}\par}
 
 % This macro redefines the \chapter command to
 % count figures and tables before the counters are cleared
