Fix formatting of main.tex. No real changes.

--- a/main.tex
+++ b/main.tex
@@ -5,10 +5,10 @@
 %\documentclass[masters,final, nodedication, noacknowledgments]{UTPAthesis}
 
 
-%% Load your packages below.
-%% Make hyperref and showkeys come at the end of your loaded packages
-%% to make sure they are not over-written.  They redefine many
-%% standard LaTeX commands
+% Load your packages below.
+% Make hyperref and showkeys come at the end of your loaded packages
+% to make sure they are not over-written.  They redefine many
+% standard LaTeX commands
 \usepackage{booktabs} % for better tables
 \usepackage{microtype} % for better typography
 \usepackage[colorlinks=false]{hyperref}  % for urls
@@ -30,9 +30,10 @@
 % Insert the title of your thesis here.
 % If you have a long title, split it between multiple lines using the \\ command
 % Also, use comment characters to avoid unwanted spaces in the Abstract page
-\Title{Titles Should Not Exceed Six Inches on One Line\\
-   and Be In The Inverted Pyramid Format\\
-   When Additional Lines Are Needed%
+\Title{%
+Titles Should Not Exceed Six Inches on One Line\\
+and Be In The Inverted Pyramid Format\\
+When Additional Lines Are Needed%
 }
 
 
@@ -41,8 +42,8 @@
 \AdvisorTitle{Chair of Committee}
 
 
-%% Insert the members of your committee here
-%% You can also give MemberA a special title
+% Insert the members of your committee here
+% You can also give MemberA a special title
 \MemberA{Dr. Carl Friedrich Gauss}  %\MemberATitle{Co-Chair of Committee}
 \MemberB{Dr. G. F. Bernhard Riemann}
 \MemberC{}
@@ -54,8 +55,8 @@
 % generated.  Specify the "final" option in the \documentclass to update the
 % counts to the correct values.
 \Abstract{%
-  An abstract is a brief summary often used to help the reader quickly
-  ascertain the paper's purpose.
+An abstract is a brief summary often used to help the reader quickly
+ascertain the paper's purpose.
 }
 
 
