Change default for \Title
Hopefully, students will follow this example.

--- a/main.tex
+++ b/main.tex
@@ -30,11 +30,9 @@
 % Insert the title of your thesis here.
 % If you have a long title, split it between multiple lines using the \\ command
 % Also, use comment characters to avoid unwanted spaces in the Abstract page
-\Title{%
-Titles Should Not Exceed Six Inches on One Line\\
+\Title{Titles Should Not Exceed Six Inches on One Line\\
 and Be In The Inverted Pyramid Format\\
-When Additional Lines Are Needed%
-}
+When Additional Lines Are Needed}
 
 
 % Insert your research advisor and his title here
