Remove color option from showkeys package
This is so students avoid submitting their
thesis with draft on.

--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 \usepackage{booktabs} % for better tables
 \usepackage{microtype} % for better typography
 \usepackage[colorlinks=false]{hyperref}  % for urls
-\usepackage[color]{showkeys} % shows labels during draft mode
+\usepackage{showkeys} % shows labels during draft mode
 
 
 
