--- a/UTPAthesis.cls
+++ b/UTPAthesis.cls
@@ -421,6 +421,7 @@
 \RequirePackage{calc}  % load this for the \widthof command
 
 \renewcommand{\cftchapfont}{\scshape} % change fonts
+\renewcommand{\chaptername}{CHAPTER}
 \renewcommand{\cftchappagefont}{\normalfont}
 \renewcommand{\cftchapleader}{\cftdotfill{2.6}} % Add Table of Contents dots
 \renewcommand{\cftchappresnum}{Chapter~} % add the word "chapter" to toc entreis
