Change Chapter to CHAPTER in TOC

--- a/UTPAthesis.cls
+++ b/UTPAthesis.cls
@@ -424,7 +424,7 @@
 \renewcommand{\cftchapfont}{\uppercase} % change fonts
 \renewcommand{\cftchappagefont}{\normalfont}
 \renewcommand{\cftchapleader}{\cftdotfill{2.6}} % Add Table of Contents dots
-\renewcommand{\cftchappresnum}{Chapter~} % add the word "chapter" to toc entreis
+\renewcommand{\cftchappresnum}{CHAPTER~} % add the word "chapter" to toc entreis
 \AtBeginDocument{\addtolength\cftchapnumwidth{\widthof{\scshape Chapter~}}}
 
 \renewcommand{\contentsname}{Table of Contents}
