Add \MemberE to main.tex

--- a/main.tex
+++ b/main.tex
@@ -46,6 +46,7 @@ When Additional Lines Are Needed}
 \MemberB{Dr. G. F. Bernhard Riemann}
 \MemberC{}
 \MemberD{}
+\MemberE{}
 
 
 % Insert the text of your abstract below.
