Try to center text in page before abstract
This inserts a \newgeometry command which attempts to center the text in the page before the abstract.  The text is not really centered. It is off by the height of the text itself.

--- a/UTPAthesis.cls
+++ b/UTPAthesis.cls
@@ -500,6 +500,7 @@
 % The following creates blank page before a chapter header
 \def\@makeappendixhead#1{%
   \newpage
+  \newgeometry{top=0in, bottom=0in, left=1in, right=1in}
   \mbox{}
   {\centering
     \vfill
