Fix margin issues in bibliography
These were introduced by the previous commit which changed the margins on the first page of appendices

--- a/UTPAthesis.cls
+++ b/UTPAthesis.cls
@@ -403,6 +403,7 @@
       \clearpage
       \providecommand\phantomsection{} \phantomsection
       \addcontentsline{toc}{chapter}{Bibliography}
+      \restoregeometry % restore geometry that was modified by appendix
       \TEMPbibliography
     }
 
