--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,8 @@
 % Switch this line to the final option when submitting your thesis.
 % This will correct counts and remove labels that are shown during draft mode
-\documentclass[masters,draft]{UTPAthesis}
-%\documentclass[masters,final]{UTPAthesis}
-%\documentclass[masters,final, nodedication, noacknowledgments]{UTPAthesis}
+\documentclass[masters,draft]{UTRGVthesis}
+%\documentclass[masters,final]{UTRGVthesis}
+%\documentclass[masters,final, nodedication, noacknowledgments]{UTRGVthesis}
 
 
 % Load your packages below.
