--- a/main.tex
+++ b/main.tex
@@ -1,3 +1,13 @@
+% This is a thesis template that attempts to conform to the guidelines
+% published by UTRGV's Graduate School office.
+
+% Please report any issues to
+% https://github.com/ggarza/UTPA-Thesis-Template/issues
+
+
+% The author of this template is Guillermo Garza.
+
+
 % Switch this line to the final option when submitting your thesis.
 % This will correct counts and remove labels that are shown during draft mode
 \documentclass[masters,draft]{UTRGVthesis}
